--- a/src/app/basket/basket-item/basket-item.component.html
+++ b/src/app/basket/basket-item/basket-item.component.html
@@ -10,9 +10,9 @@
   <div class="basket-item-control">
     <div class="basket-item-control-remove"
          [id]=itemId
-         (click)="removeFromBasket()">Удалить</div>
+         (click)="removeFromBasket()">Remove:</div>
 
-    <div class="basket-item-control-price">Цена:<br>{{itemPrice}} руб.</div>
+    <div class="basket-item-control-price">Price:<br>{{itemPrice}} byn.</div>
 
     <div class="basket-item-control-amount">
       <div class="basket-item-control-amount-minus"
