--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,7 +2,8 @@
 
   <div class="main-cent">
     <div class="main-image">
-      <h1>Мебель для дома</h1>
+      <h1>Furniture for your home</h1>
+      <img src="./assets/home/главная.jpg" alt="">
     </div>
   </div>
 
@@ -15,15 +16,15 @@
   <div class="main-categories">
     <div class="main-cent js-content">
       <div class="main-categories-sofa" routerLink="sofas">
-        <h3>Диваны</h3>
+        <img src="./assets/home/категория_диван.png" alt="">
       </div>
 
       <div class="main-categories-chair" routerLink="chairs">
-        <h3>Кресла</h3>
+        <img src="./assets/home/категория_кресло.jpg" alt="">
       </div>
 
       <div class="main-categories-table" routerLink="tables">
-        <h3>Столы</h3>
+        <img src="./assets/home/категория_стол.jpg" alt="">
       </div>
     </div>
   </div>
