--- a/src/app/thanks-for-order/thanks-for-order.component.css
+++ b/src/app/thanks-for-order/thanks-for-order.component.css
@@ -3,7 +3,8 @@
   min-height: 100%;
   display: flex;
   flex-direction: column;
-  align-items: center; }
+  align-items: center;
+  padding: 0 10px; }
   .thanks-for-order-cent {
     display: flex;
     flex-direction: column;
