--- a/src/app/all-products/filter/sofas-filter/sofas-filter.component.css
+++ b/src/app/all-products/filter/sofas-filter/sofas-filter.component.css
@@ -3,15 +3,6 @@
   width: 80px;
   justify-content: space-between; }
 
-.type,
-.mechanism,
-.length,
-.bedLength,
-.bedWidth,
-.price {
-  margin: 30px 0 10px;
-  font-weight: bold; }
-
 .point-length input,
 .point-bedLength input,
 .point-bedWidth input,
@@ -28,4 +19,5 @@ fieldset {
   margin-bottom: 20px; }
 
 legend {
-  font-weight: bold; }
+  font-weight: bold;
+  margin-bottom: 5px; }
