--- a/src/app/basket/basket-item/basket-item.component.css
+++ b/src/app/basket/basket-item/basket-item.component.css
@@ -9,10 +9,12 @@
     margin-bottom: 5px; }
   .basket-item-info-img {
     display: flex;
-    align-items: flex-end;
-    width: 150px;
-    height: 150px;
-    margin-top: 15px; }
+    flex-direction: column;
+    justify-content: center;
+    max-width: 150px;
+    min-width: 100px;
+    margin-top: 15px;
+    overflow: hidden; }
     .basket-item-info-img img {
       display: block;
       max-width: 100%;
@@ -45,3 +47,18 @@
         border: 1px solid #15004a;
         padding: 5px 10px;
         font-size: 20px; }
+
+@media screen and (max-width: 650px) {
+  .basket-item-info {
+    margin-right: 5px; } }
+
+@media screen and (max-width: 600px) {
+  .basket-item {
+    padding: 10px; } }
+
+@media screen and (max-width: 440px) {
+  .basket-item-control-amount div {
+    padding: 3px;
+    font-size: 10px; }
+  .basket-item-control-amount input {
+    max-width: 30px; } }
