--- a/src/app/basket/basket-item/basket-item.component.scss
+++ b/src/app/basket/basket-item/basket-item.component.scss
@@ -14,10 +14,12 @@
 
     &-img {
       display: flex;
-      align-items: flex-end;
-      width: 150px;
-      height: 150px;
+      flex-direction: column;
+      justify-content: center;
+      max-width: 150px;
+      min-width: 100px;
       margin-top: 15px;
+      overflow: hidden;
 
       img {
         display: block;
@@ -76,4 +78,30 @@
     }
 
   }
+}
+
+@media screen and (max-width: 650px){
+  .basket-item-info {
+    margin-right: 5px;
+  }
+}
+
+@media screen and (max-width: 600px){
+  .basket-item {
+    padding: 10px;
+  }
+}
+
+@media screen and (max-width: 440px){
+  .basket-item-control-amount {
+    div {
+      padding: 3px;
+      font-size: 10px;
+    }
+
+    input {
+      max-width: 30px;
+    }
+  }
+
 }
