--- a/src/app/basket/basket.component.css
+++ b/src/app/basket/basket.component.css
@@ -14,13 +14,14 @@
     text-align: center; }
     .basket-info-container {
       box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
-      padding: 20px 0; }
+      padding: 20px 5px; }
       .basket-info-container div {
         font-size: 20px; }
       .basket-info-container-place-an-order {
         margin-top: 30px;
         text-align: center;
-        width: 200px;
+        width: 100%;
+        max-width: 200px;
         background-color: #15004a;
         color: white;
         font-weight: bold;
@@ -31,3 +32,17 @@
 
 [disabled] {
   opacity: .5; }
+
+@media screen and (max-width: 600px) {
+  .basket-info-container {
+    line-height: 25px; }
+    .basket-info-container div {
+      font-size: 15px; } }
+
+@media screen and (max-width: 450px) {
+  .basket {
+    font-size: 13px; }
+    .basket-info-container {
+      line-height: 15px; }
+      .basket-info-container div {
+        font-size: 13px; } }
