--- a/src/app/basket/basket.component.scss
+++ b/src/app/basket/basket.component.scss
@@ -18,7 +18,7 @@
 
     &-container {
       box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
-      padding: 20px 0;
+      padding: 20px 5px;
 
       div {
         font-size: 20px;
@@ -27,7 +27,8 @@
       &-place-an-order {
         margin-top: 30px;
         text-align: center;
-        width: 200px;
+        width: 100%;
+        max-width: 200px;
         background-color: #15004a;
         color: white;
         font-weight: bold;
@@ -45,4 +46,27 @@
 
 [disabled] {
   opacity: .5;
+}
+
+@media screen and (max-width: 600px){
+ .basket-info-container {
+   line-height: 25px;
+   div {
+     font-size: 15px;
+   }
+ }
+
+}
+
+@media screen and (max-width: 450px){
+  .basket {
+    font-size: 13px;
+
+    &-info-container {
+      line-height: 15px;
+      div {
+        font-size: 13px;
+      }
+    }
+  }
 }
