--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -1,6 +1,10 @@
 // для header
 @import '../../styles/variables.scss';
 
+.header {
+  width: 100%;
+}
+
 .cent {
   width: 100%;
   max-width: 1200px;
@@ -13,42 +17,38 @@
   width: 100%;
   background-color: $head-footer-caption-bg-color;
   padding: 20px 0;
+}
+
+.home-link {
+  flex-shrink: 0;
+  width: 30px;
+  height: 30px;
+  font-size: 20px;
 
   img {
     display: block;
     width: 100%;
     height: 100%;
-
-    &:hover {
-      transform: scale(1.2);
-      cursor: pointer;
-    }
   }
 }
 
-.home-link {
-  align-items: center;
-  width: 30px;
-  height: 30px;
+.company-name {
+  margin: 0 5px;
+  border: 1px solid green;
   font-size: 20px;
+  line-height: 25px;
 }
 
 .search {
   display: flex;
   justify-content: flex-end;
   flex-grow: 1;
-
-/*  &-number {
-    align-self: center;
-    line-height: 1.3em;
-    margin-left: 20px;
-  }*/
+  margin-left: 5px;
 
   input {
     display: block;
     width: 100%;
     max-width: 300px;
-  /*  margin-right: 10px;*/
     border: none;
     border-radius: 50px;
 
@@ -68,28 +68,20 @@
 
     &-amount {
       position: absolute;
-      top: -2px;
-      right: -5px;
-      width: 13px;
-      height: 13px;
+      top: -5px;
+      right: -6px;
+      width: 16px;
+      height: 15px;
       border-radius: 50px;
       background-color: red;
       color: white;
-      font-size: 10px;
+      font-size: 12px;
       font-weight: bold;
       text-align: center;
-      padding-top: 2px;
+      padding: 1px 0
     }
   }
 
-  &-login {
-    color: #5f0877;
-    font-weight: bold;
-
-    &:hover {
-      cursor: pointer;
-    }
-  }
 
   &-search,
   &-basket,
@@ -98,6 +90,12 @@
     width: 30px;
     height: 30px;
     margin: 0 3px;
+
+    img {
+      display: block;
+      width: 100%;
+      height: 100%;
+    }
   }
 }
 
