--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,8 +1,10 @@
 @import '../../styles/variables.scss';
 
 .main {
+  max-width: 100%;
   display: flex;
   flex-direction: column;
+  padding: 0 5px;
 
   &-cent {
     width: 100%;
@@ -14,21 +16,28 @@
   &-image {
     display: flex;
     width: 100%;
-    background-color: blanchedalmond;
-    height: 450px;
-    background-image: url("../../assets/home/главная.jpg");
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;
+    flex-direction: column;
+    justify-content: center;
+    overflow: hidden;
+    position: relative;
+
+    img {
+      width: 100%;
+      height: 100%;
+      display: block;
+    }
 
     h1 {
       margin: 10px 60px 0 auto;
+      position: absolute;
+      top: 10px;
+      left: 55px;
     }
   }
 
     &-caption {
       width: 100%;
-      padding: 30px 0;
+      padding: 30px 10px;
       background-color: $head-footer-caption-bg-color;
       margin: 10px 0;
 
@@ -42,6 +51,7 @@
     width: 100%;
     margin: 30px 0;
 
+
     h3 {
       color: $caption-color;
       font-size: 20px;
@@ -52,27 +62,21 @@
     &-chair,
     &-table {
       width: 30%;
-      height: 300px;
-      background-position: bottom;
-      background-size: cover;
-      background-repeat: no-repeat;
+      overflow: hidden;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+
+      img {
+        width: 100%;
+        height: 100%;
+        display: block;
+      }
 
       &:hover {
         transform: scale(1.01);
         cursor: pointer;
       }
-    }
-
-    &-sofa {
-      background-image: url("../../assets/home/категория_диван.png");
-    }
-
-    &-chair {
-      background-image: url("../../assets/home/категория_кресло.jpg");
-    }
-
-    &-table {
-      background-image: url("../../assets/home/категория_стол.jpg");
     }
   }
 
