--- a/src/app/thanks-for-order/thanks-for-order.component.html
+++ b/src/app/thanks-for-order/thanks-for-order.component.html
@@ -3,10 +3,10 @@
     <div class="thanks-for-order-img">
       <img src="./assets/icons/done.png" alt="">
     </div>
-    <h2>Спасибо, ваш заказ оформлен!</h2>
-    <p>Наш оператор свяжется с вами в ближайшее время для уточнения деталей.</p>
-    <p>Вы можете просмотреть
-      <span (click)="goToAccount()">историю ваших заказов</span>
-      или вернуться <span (click)="goHome()">на главную страницу</span></p>
+    <h2>Thank you, your order has been placed!</h2>
+    <p>Our operator will contact you shortly for details.</p>
+    <p>You can view
+      <span (click)="goToAccount()">your orders history</span>
+      or go back <span (click)="goHome()">to home page</span></p>
   </div>
 </div>
