--- a/src/app/user-account/about-user/about-user.component.scss
+++ b/src/app/user-account/about-user/about-user.component.scss
@@ -1,10 +1,10 @@
 .about-user {
+  width: 100%;
   display: flex;
   flex-direction: column;
 
   &-cent {
     width: 100%;
-    max-width: 600px;
     margin: 30px auto;
     padding: 30px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, .3);
@@ -14,5 +14,11 @@
         margin-bottom: 15px;
       }
     }
+  }
+}
+
+@media screen and (max-width: 620px) {
+  .about-user-cent {
+    margin: 0 5px;
   }
 }
