--- a/src/app/user-account/orders/orders.component.scss
+++ b/src/app/user-account/orders/orders.component.scss
@@ -43,7 +43,10 @@
           border: 1px dashed grey;
 
           &-img {
-            min-width: 200px;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            min-width: 100px;
             min-height: 200px;
             overflow: hidden;
             padding: 10px;
@@ -52,7 +55,6 @@
             img {
               display: block;
               width: 100%;
-              height: 100%;
             }
           }
 
@@ -77,5 +79,22 @@
     }
 
   }
+}
+
+@media screen and (max-width: 650px) {
+  .orders-cent-card-info {
+    font-size: 12px;
+  }
+
+  .orders-cent-card-products-item-img {
+    padding: 5px;
+    margin-right: 3px;
+  }
+
+  .orders-cent-card-products-item-info {
+    padding: 5px;
+    font-size: 12px;
+  }
+
 }
 
