--- a/src/styles.css
+++ b/src/styles.css
@@ -1,17 +1,20 @@
 * {
   box-sizing: border-box; }
 
+.body {
+  width: 100%; }
+
 app-root {
   display: flex;
   flex-direction: column;
   min-height: 100vh; }
 
 main {
+  width: 100%;
   flex-grow: 1; }
 
 h1 {
   color: white;
-  font-size: 40px;
+  font-size: 30px;
   font-weight: bold;
-  line-height: 1.2em;
-  margin: 0 0 50px 50px; }
+  line-height: 1.2em; }
