--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,10 @@
 * {
   box-sizing: border-box;
 }
+
+.body {
+  width: 100%;
+}
 app-root {
   display: flex;
   flex-direction: column;
@@ -8,14 +12,14 @@ app-root {
 }
 
 main {
+  width: 100%;
   flex-grow: 1;
 }
 
 h1 {
   color: white;
-  font-size: 40px;
+  font-size: 30px;
   font-weight: bold;
   line-height: 1.2em;
-  margin: 0 0 50px 50px;
 }
 
