--- a/src/app/comparison/comparison-item/comparison-item.component.css
+++ b/src/app/comparison/comparison-item/comparison-item.component.css
@@ -6,9 +6,21 @@
 
 .comparison-item-point-img {
   display: flex;
+  flex-direction: column;
   justify-content: center;
-  padding: 20px 0; }
+  width: 100%;
+  height: 150px;
+  padding: 10px; }
   .comparison-item-point-img img {
     display: block;
-    width: 100px;
-    height: 100px; }
+    width: 100%;
+    max-height: 100%; }
+
+@media screen and (max-width: 700px) {
+  .comparison-item-point-img {
+    height: 100px; } }
+
+@media screen and (max-width: 460px) {
+  .comparison-item-point {
+    font-size: 12px;
+    padding: 10px; } }
