--- a/src/app/comparison/comparison-item/comparison-item.component.scss
+++ b/src/app/comparison/comparison-item/comparison-item.component.scss
@@ -9,13 +9,28 @@
 
 .comparison-item-point-img {
   display: flex;
+  flex-direction: column;
   justify-content: center;
-  padding: 20px 0;
+  width: 100%;
+  height: 150px;
+  padding: 10px;
 
   img {
     display: block;
-    width: 100px;
+    width: 100%;
+    max-height: 100%;
+  }
+}
+
+@media screen and (max-width: 700px){
+  .comparison-item-point-img {
     height: 100px;
   }
 }
 
+@media screen and (max-width: 460px){
+  .comparison-item-point {
+    font-size: 12px;
+    padding: 10px;
+  }
+}
