--- a/src/app/comparison/comparison.component.css
+++ b/src/app/comparison/comparison.component.css
@@ -1,3 +1,7 @@
+app-comparison-item {
+  margin: 0 2px;
+  width: 27%; }
+
 .comparison {
   width: 100%;
   max-width: 1600px;
@@ -23,14 +27,36 @@
     display: flex;
     justify-content: center;
     margin-top: 30px;
-    padding: 20px; }
+    padding: 5px; }
     .comparison-block-message {
       font-weight: bold;
       font-size: 15px; }
-    .comparison-block-characteristics-point {
-      padding: 20px;
-      text-align: right;
-      font-weight: bold; }
-      .comparison-block-characteristics-point:nth-child(1) {
-        height: 140px;
-        font-size: 0px; }
+    .comparison-block-characteristics {
+      width: 15%;
+      margin-right: 5px; }
+      .comparison-block-characteristics-point {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        height: 56px;
+        vertical-align: middle;
+        text-align: right;
+        font-weight: bold; }
+        .comparison-block-characteristics-point span {
+          display: block; }
+        .comparison-block-characteristics-point:nth-child(1) {
+          height: 150px;
+          font-size: 0px; }
+
+@media screen and (max-width: 780px) {
+  .comparison-block-characteristics {
+    font-size: 12px; } }
+
+@media screen and (max-width: 700px) {
+  .comparison-block-characteristics-point:nth-child(1) {
+    height: 100px; } }
+
+@media screen and (max-width: 460px) {
+  .comparison-block-characteristics-point {
+    height: 32px;
+    font-size: 10px; } }
