--- a/src/app/comparison/comparison.component.scss
+++ b/src/app/comparison/comparison.component.scss
@@ -1,3 +1,8 @@
+app-comparison-item {
+  margin: 0 2px;
+  width: 27%;
+}
+
 .comparison {
   width: 100%;
   max-width: 1600px;
@@ -31,7 +36,7 @@
     display: flex;
     justify-content: center;
     margin-top: 30px;
-    padding: 20px;
+    padding: 5px;
 
     &-message {
       font-weight: bold;
@@ -39,18 +44,50 @@
     }
 
     &-characteristics {
+      width: 15%;
+      margin-right: 5px;
+
 
       &-point {
-        padding: 20px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        height: 56px;
+        vertical-align: middle;
         text-align: right;
         font-weight: bold;
 
+        span {
+          display: block;
+        }
+
         &:nth-child(1) {
-          height: 140px;
+          height: 150px;
           font-size: 0px;
         }
       }
     }
+  }
+}
+
+@media screen and (max-width: 780px){
+  .comparison-block-characteristics {
+    font-size: 12px;
+  }
+}
+
+@media screen and (max-width: 700px){
+  .comparison-block-characteristics-point {
+    &:nth-child(1) {
+      height: 100px;
+    }
+  }
+}
+
+@media screen and (max-width: 460px){
+  .comparison-block-characteristics-point {
+    height: 32px;
+    font-size: 10px;
   }
 }
 
