--- a/src/app/user-account/about-user/about-user.component.scss
+++ b/src/app/user-account/about-user/about-user.component.scss
@@ -4,7 +4,7 @@
   flex-direction: column;
 
   &-cent {
-    width: 100%;
+    max-width: 100%;
     margin: 30px auto;
     padding: 30px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, .3);
@@ -17,8 +17,3 @@
   }
 }
 
-@media screen and (max-width: 620px) {
-  .about-user-cent {
-    margin: 0 5px;
-  }
-}
